test/optimizations/localon/wrong-local-on.good
wrong-local-on.chpl:3: error: Local-on is not local
