test/optimizations/localon/wrong-local-on.skipif
#!/usr/bin/env python

import os

print(os.getenv('CHPL_COMM') == 'none')
